[package]
name = "tcp-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
prost = "0.11.0"

[build-dependencies]
prost-build = { version = "0.11.0" }

[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"
